# bakalarkaBorka

./: CMakeLists.txt
conf/: MainConfig_server2404.txt  promene.txt  scenare.txt
lib60870-C/: Makefile
lib60870-C/documentation/: RXmatrix.py
lib60870-C/examples/: CTestTestfile.cmake  Makefile
log/: EventLog.txt  log.txt
my_program/: MainConfig_server2404.txt  s_server.c
scenre104/: CMakeLists.txt  main.c
src/: s_server.c  simple_server.c
untitled_clion_c/: CMakeLists.txt
untitled_clion_c/lib60870-C/: CTestTestfile.cmake  cmake_install.cmake
untitled_clion_c/lib60870-C/examples/: cmake_install.cmake
untitled_clion_c/lib60870-C/examples/cs101_master_balanced/: CTestTestfile.cmake  Makefile
untitled_clion_c/lib60870-C/examples/cs101_master_unbalanced/: CTestTestfile.cmake  cmake_install.cmake
untitled_clion_c/lib60870-C/examples/cs104_client/: Makefile  cmake_install.cmake
untitled_clion_c/lib60870-C/examples/cs104_redundancy_server/: cmake_install.cmake
untitled_clion_c/lib60870-C/examples/cs104_server/: EventLog.txt  MainConfig_server2406.txt  ServerStatus.txt
untitled_clion_c/lib60870-C/examples/cs104_server_no_threads/: cmake_install.cmake
untitled_clion_c/lib60870-C/examples/multi_client_server/: cmake_install.cmake
untitled_clion_c/lib60870-C/examples/tls_client/: CTestTestfile.cmake  cmake_install.cmake
untitled_clion_c/lib60870-C/examples/tls_server/: Makefile
untitled_clion_c/lib60870-C/src/: Makefile  cmake_install.cmake
untitled_clion_c/lib60870-C/tests/: Makefile  cmake_install.cmake
untitled_clion_c/src/: s_server.c
(+30 files in other folders)
